Fix dark mode issue

--- a/src/components/Menu/ToolbarMenu/ToolbarMenuComponent.scss
+++ b/src/components/Menu/ToolbarMenu/ToolbarMenuComponent.scss
@@ -16,7 +16,7 @@
         }
     }
 
-    #regionListButton {
+    .regionList-button {
         width: 30px;
 
         .bp3-icon {
